add new website from server na

--- a/xem-phim-moi/danh-trach-tro-choi/index.html
+++ b/xem-phim-moi/danh-trach-tro-choi/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             2
             </dd>
             <br/>
            </dl>
@@ -1755,40 +1755,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bo-ba-trom-cap-phan-dac-biet-giang-sinh" title="Bộ ba trộm cắp: Phần đặc biệt Giáng sinh">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-cua-ong-chu-phan-1" title="Tình yêu của ông chú (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-ba-trom-cap-phan-dac-biet-giang-sinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-cua-ong-chu-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bộ ba trộm cắp: Phần đặc biệt Giáng sinh
+             Tình yêu của ông chú (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Trailer Park Boys: Xmas Special
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/blade-ii" title="Blade II">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/blade-ii-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Blade II
-            </span>
-            <span class="list-top-movie-item-en">
-             Blade II
+             Ossan's Love (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1799,21 +1777,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ruben-brandt-collector" title="Ruben Brandt, Collector">
+          <a class="list-top-movie-link" href="/phim-moi/dem-ky-uc-2" title="Đêm ký ức">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ruben-brandt-collector-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-ky-uc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ruben Brandt, Collector
+             Đêm ký ức
             </span>
             <span class="list-top-movie-item-en">
-             Ruben Brandt, Collector
+             Forgotten
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1821,18 +1799,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/accel-world" title="Accel World">
+          <a class="list-top-movie-link" href="/phim-moi/de-tam-sat-thu" title="Đệ Tam Sát Thủ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/accel-world-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/de-tam-sat-thu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Accel World
+             Đệ Tam Sát Thủ
             </span>
             <span class="list-top-movie-item-en">
-             Accel World
+             Pineapple Express
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1843,18 +1821,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/running-with-the-devil-the-wild-world-of-john-mcafee" title="Running with the Devil: The Wild World of John McAfee">
+          <a class="list-top-movie-link" href="/phim-moi/than-dong-bong-chay" title="Thần Đồng Bóng Chày">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/running-with-the-devil-the-wild-world-of-john-mcafee-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/than-dong-bong-chay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Running with the Devil: The Wild World of John McAfee
+             Thần Đồng Bóng Chày
             </span>
             <span class="list-top-movie-item-en">
-             Running with the Devil: The Wild World of John McAfee
+             The Phenom
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ban-than-cua-me" title="Bạn Thân Của Mẹ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-than-cua-me-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bạn Thân Của Mẹ
+            </span>
+            <span class="list-top-movie-item-en">
+             맛집:친구 엄마 무삭제
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
