--- a/xem-phim-moi/danh-trach-tro-choi/index.html
+++ b/xem-phim-moi/danh-trach-tro-choi/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1755,21 +1755,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-cua-ong-chu-phan-1" title="Tình yêu của ông chú (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-may-200-tuoi" title="Người Máy 200 Tuổi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-cua-ong-chu-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-may-200-tuoi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tình yêu của ông chú (Phần 1)
+             Người Máy 200 Tuổi
             </span>
             <span class="list-top-movie-item-en">
-             Ossan's Love (Season 1)
+             Bicentennial Man
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1777,18 +1777,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dem-ky-uc-2" title="Đêm ký ức">
+          <a class="list-top-movie-link" href="/phim-moi/moi-hon-ngot-ngao" title="Môi Hôn Ngọt Ngào">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-ky-uc-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/moi-hon-ngot-ngao-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đêm ký ức
+             Môi Hôn Ngọt Ngào
             </span>
             <span class="list-top-movie-item-en">
-             Forgotten
+             Tell It to the Bees
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1799,18 +1799,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/de-tam-sat-thu" title="Đệ Tam Sát Thủ">
+          <a class="list-top-movie-link" href="/phim-moi/vanh-dai-the-gioi" title="Vành đai thế giới">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/de-tam-sat-thu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vanh-dai-the-gioi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đệ Tam Sát Thủ
+             Vành đai thế giới
             </span>
             <span class="list-top-movie-item-en">
-             Pineapple Express
+             Rim of the World
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1821,21 +1821,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/than-dong-bong-chay" title="Thần Đồng Bóng Chày">
+          <a class="list-top-movie-link" href="/phim-moi/cuc-cung-cua-tong-tai" title="Cục Cưng Của Tổng Tài">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/than-dong-bong-chay-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuc-cung-cua-tong-tai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thần Đồng Bóng Chày
+             Cục Cưng Của Tổng Tài
             </span>
             <span class="list-top-movie-item-en">
-             The Phenom
+             Favour
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1843,18 +1843,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ban-than-cua-me" title="Bạn Thân Của Mẹ">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-phu-nu-tuyet-voi" title="Người Phụ Nữ Tuyệt Vời">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-than-cua-me-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-phu-nu-tuyet-voi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bạn Thân Của Mẹ
+             Người Phụ Nữ Tuyệt Vời
             </span>
             <span class="list-top-movie-item-en">
-             맛집:친구 엄마 무삭제
+             The Wonder Woman
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
