add new website from server na

--- a/xem-phim-moi/hau-due-su-troi-day-cua-red/index.html
+++ b/xem-phim-moi/hau-due-su-troi-day-cua-red/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1785,18 +1785,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-hau-gai-akiba" title="Cuộc Chiến Hầu Gái Akiba">
+          <a class="list-top-movie-link" href="/phim-moi/ginny-georgia" title="Ginny &amp; Georgia">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-hau-gai-akiba-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ginny-georgia-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cuộc Chiến Hầu Gái Akiba
+             Ginny &amp; Georgia
             </span>
             <span class="list-top-movie-item-en">
-             Akiba Maid War
+             Ginny &amp; Georgia
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/truy-cau-may-rac-keo-mo-pham-truong-hoc" title="Truy Cầu: Máy Rắc Kẹo Mô Phạm Trường Học">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truy-cau-may-rac-keo-mo-pham-truong-hoc-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Truy Cầu: Máy Rắc Kẹo Mô Phạm Trường Học
+            </span>
+            <span class="list-top-movie-item-en">
+             Table Tennis Dream: Campus Model Lovers
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1807,18 +1829,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thuc-su-yeu" title="Thực sự yêu">
+          <a class="list-top-movie-link" href="/phim-moi/suburra-mau-nhuom-thanh-rome-phan-1" title="Suburra: Máu nhuộm thành Rome (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thuc-su-yeu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/suburra-mau-nhuom-thanh-rome-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thực sự yêu
+             Suburra: Máu nhuộm thành Rome (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Really Love
+             Suburra: Blood on Rome (Season 1)
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ban-thich-thu-tu-cua-minh-nhu-the-nao-phan-2" title="Bạn thích thư Tư của mình như thế nào? (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-thich-thu-tu-cua-minh-nhu-the-nao-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bạn thích thư Tư của mình như thế nào? (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             How do you like Wednesday? (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1829,62 +1873,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/moi-chi-dinh-nhan-vat-yeu-duong" title="Mời Chỉ Định Nhân Vật Yêu Đương">
+          <a class="list-top-movie-link" href="/phim-moi/su-cam-do-cua-nang-tien-ben-suon-doi" title="Sự Cám Dỗ Của Nàng Tiên Bên Sườn Đồi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/moi-chi-dinh-nhan-vat-yeu-duong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-cam-do-cua-nang-tien-ben-suon-doi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mời Chỉ Định Nhân Vật Yêu Đương
+             Sự Cám Dỗ Của Nàng Tiên Bên Sườn Đồi
             </span>
             <span class="list-top-movie-item-en">
-             Designated Love
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-tien-sinh-hoa-ra-anh-la-nhu-vay" title="Cố Tiên Sinh, Hóa Ra Anh Là Như Vậy">
-           <span class="status">
-            HD Vietsub + Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-tien-sinh-hoa-ra-anh-la-nhu-vay-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cố Tiên Sinh, Hóa Ra Anh Là Như Vậy
-            </span>
-            <span class="list-top-movie-item-en">
-             Hello Mr. Gu
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-song-tiep-theo-cua-toi-nhu-mot-villainess-s2" title="Cuộc sống tiếp theo của tôi như một Villainess S2">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-song-tiep-theo-cua-toi-nhu-mot-villainess-s2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cuộc sống tiếp theo của tôi như một Villainess S2
-            </span>
-            <span class="list-top-movie-item-en">
-             My Next Life as a Villainess S2
+             속살유혹 둔덕골 선녀
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
