add new website from server na

--- a/xem-phim-bo/do-hoa-nien/index.html
+++ b/xem-phim-bo/do-hoa-nien/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1659,18 +1659,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/doi-quan-shadwell" title="Đội Quân Shadwell">
+          <a class="list-top-movie-link" href="/phim-moi/sau-dam-cuoi" title="Sau Đám Cưới">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-quan-shadwell-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sau-dam-cuoi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đội Quân Shadwell
+             Sau Đám Cưới
             </span>
             <span class="list-top-movie-item-en">
-             ID2: Shadwell Army
+             After the Wedding
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/cau-chuyen-chua-giang-sinh" title="Câu Chuyện Chúa Giáng Sinh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-chuyen-chua-giang-sinh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Câu Chuyện Chúa Giáng Sinh
+            </span>
+            <span class="list-top-movie-item-en">
+             The Nativity Story
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1681,21 +1703,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba" title="Hùng Long Phong Bá">
+          <a class="list-top-movie-link" href="/phim-moi/nha-tien-tri" title="Nhà Tiên Tri">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-tien-tri-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hùng Long Phong Bá
+             Nhà Tiên Tri
             </span>
             <span class="list-top-movie-item-en">
-             Brothers For Life
+             A Prophet
             </span>
             <span class="list-top-movie-item-view">
-             15 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1703,18 +1725,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-nga-duong-uoc-mo-phan-3" title="Những ngả đường ước mơ (Phần 3)">
+          <a class="list-top-movie-link" href="/phim-moi/300-chien-binh-de-che-troi-day" title="300 Chiến Binh: Đế Chế Trỗi Dậy">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-nga-duong-uoc-mo-phan-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/300-chien-binh-de-che-troi-day-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những ngả đường ước mơ (Phần 3)
+             300 Chiến Binh: Đế Chế Trỗi Dậy
             </span>
             <span class="list-top-movie-item-en">
-             Sintonia (Season 3)
+             300: Rise of an Empire
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1725,43 +1747,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-ban-gai-lieu-mang-cua-toi" title="Người bạn gái liều mạng của tôi">
+          <a class="list-top-movie-link" href="/phim-moi/jujutsu-kaisen-zero" title="JUJUTSU KAISEN: ZERO">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-ban-gai-lieu-mang-cua-toi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/jujutsu-kaisen-zero-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người bạn gái liều mạng của tôi
+             JUJUTSU KAISEN: ZERO
             </span>
             <span class="list-top-movie-item-en">
-             My Dangerous Girlfriend
+             劇場版 咒術迴戰 0
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/diep-van-cuu-long-thanh-trai" title="Diệp Vấn: Cửu Long Thành Trại">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/diep-van-cuu-long-thanh-trai-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Diệp Vấn: Cửu Long Thành Trại
-            </span>
-            <span class="list-top-movie-item-en">
-             Ip Man and Four Kings
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
