add new website from server na

--- a/xem-phim-bo/nguoi-yeu-blind-box-cua-toi/index.html
+++ b/xem-phim-bo/nguoi-yeu-blind-box-cua-toi/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1596,28 +1596,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
            <span class="status">
             FHD Vietsub
@@ -1630,6 +1608,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              The Blood of Youth
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-en">
+             Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1653,21 +1653,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ro-bot-biet-tuot-gio-giai-dap-phan-2" title="Rô bốt biết tuốt: Giờ giải đáp (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/truoc-luc-binh-minh-2" title="Trước Lúc Bình Minh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ro-bot-biet-tuot-gio-giai-dap-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truoc-luc-binh-minh-1995-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Rô bốt biết tuốt: Giờ giải đáp (Phần 2)
+             Trước Lúc Bình Minh
             </span>
             <span class="list-top-movie-item-en">
-             StoryBots: Answer Time (Season 2)
+             Before Sunrise
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1675,18 +1675,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cao-va-cho-san-2" title="Cáo và Chó Săn 2">
+          <a class="list-top-movie-link" href="/phim-moi/ban-trai-bat-dac-di" title="Bạn Trai Bất Đắc Dĩ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cao-va-cho-san-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-trai-bat-dac-di-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cáo và Chó Săn 2
+             Bạn Trai Bất Đắc Dĩ
             </span>
             <span class="list-top-movie-item-en">
-             The Fox and the Hound 2
+             La Historia Du Un Amor
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1697,18 +1697,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chu-cho-max-2-nguoi-hung-nha-trang" title="Chú Chó Max 2- Người Hùng Nhà Trắng">
+          <a class="list-top-movie-link" href="/phim-moi/nhu-hoa-tren-cat" title="Như Hoa Trên Cát">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chu-cho-max-2-nguoi-hung-nha-trang-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhu-hoa-tren-cat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chú Chó Max 2- Người Hùng Nhà Trắng
+             Như Hoa Trên Cát
             </span>
             <span class="list-top-movie-item-en">
-             Max 2: White House Hero
+             Like Flowers in Sand
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/em-la-my-vi-cua-anh" title="Em Là Mỹ Vị Của Anh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/em-la-my-vi-cua-anh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Em Là Mỹ Vị Của Anh
+            </span>
+            <span class="list-top-movie-item-en">
+             Healing Food, Healing Love
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1719,43 +1741,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-nguoi-ban-phan-6" title="Những người bạn (Phần 6)">
+          <a class="list-top-movie-link" href="/phim-moi/hoi-ngo-quy-du" title="Hội Ngộ Quỷ Dữ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-nguoi-ban-phan-6-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-ngo-quy-du-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những người bạn (Phần 6)
+             Hội Ngộ Quỷ Dữ
             </span>
             <span class="list-top-movie-item-en">
-             Friends (Season 6)
+             Meeting Evil
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/roi-tu-do-vu-dieu-tra-boeing" title="Rơi tự do: Vụ điều tra Boeing">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/roi-tu-do-vu-dieu-tra-boeing-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Rơi tự do: Vụ điều tra Boeing
-            </span>
-            <span class="list-top-movie-item-en">
-             Downfall: The Case Against Boeing
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
